--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           </p>
         </div>
 
-        <div class="writing">
+        <div class="card-title">
           <div class="start">
             <span class="tag">
               <img src="./icons/tag.svg" />
@@ -319,7 +319,17 @@
                     />
 
                     <label class="form-check-label" for="exampleRadios1">
-                      <img src="./icons/public.svg" />
+                      <svg
+                        class="public-img"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          fill="#000000"
+                          d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 1 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 0 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5v-9zm10.5-1V9h-8c-.356 0-.694.074-1 .208V2.5a1 1 0 0 1 1-1h8zM5 12.25v3.25a.25.25 0 0 0 .4.2l1.45-1.087a.25.25 0 0 1 .3 0L8.6 15.7a.25.25 0 0 0 .4-.2v-3.25a.25.25 0 0 0-.25-.25h-3.5a.25.25 0 0 0-.25.25z"
+                        />
+                      </svg>
                       <span class="text-bold">Public </span>
                       <p>Anyone on the internet can see this repository</p>
                     </label>
@@ -336,7 +346,18 @@
                     />
 
                     <label class="form-check-label" for="exampleRadios1">
-                      <img src="./icons/lock.svg" />
+                      <svg
+                        class="public-img"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          fill="#000000"
+                          d="M6 9V7.25C6 3.845 8.503 1 12 1s6 2.845 6 6.25V9h.5a2.5 2.5 0 012.5 2.5v8a2.5 2.5 0 01-2.5 2.5h-13A2.5 2.5 0 013 19.5v-8A2.5 2.5 0 015.5 9H6zm1.5-1.75C7.5 4.58 9.422 2.5 12 2.5c2.578 0 4.5 2.08 4.5 4.75V9h-9V7.25zm-3 4.25a1 1 0 011-1h13a1 1 0 011 1v8a1 1 0 01-1 1h-13a1 1 0 01-1-1v-8z"
+                        ></path>
+                      </svg>
+
                       <span class="text-bold"> Private </span>
                       <p>
                         You choose who can see and commit to this repository
@@ -413,7 +434,7 @@
           </div>
         </div>
 
-        <div class="writing">
+        <div class="card-title">
           <div class="start">
             <span class="tag">
               <img src="./icons/tool.svg" />
@@ -489,7 +510,7 @@
           </div>
         </div>
 
-        <div class="writing">
+        <div class="card-title">
           <div class="start">
             <span class="tag">
               <img src="./icons/study-hat.svg" />
