--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Github</title>
+    <title>GitHub</title>
     <link rel="icon" href="./favicon (1).ico" type="image/x-con" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -474,9 +474,7 @@
               <h5>Simplify your development workflow with a GUI</h5>
 
               <div class="row">
-                <div>
-                  <img class="gh-desktop" src="./icons/gh-desktop.png" />
-                </div>
+                <img class="gh-desktop" src="./icons/gh-desktop.png" />
 
                 <div>
                   <a href="https://desktop.github.com/">
@@ -494,9 +492,7 @@
               <h5>Get AI-based coding suggestions</h5>
 
               <div class="row">
-                <div>
-                  <img class="copilot" src="./icons/copilot.webp" />
-                </div>
+                <img class="copilot" src="./icons/copilot.webp" />
 
                 <div>
                   <a href="https://github.com/github-copilot/signup">
