--- a/index.html
+++ b/index.html
@@ -544,7 +544,6 @@
 
         <div class="block-bottom">
           <div class="card get-started" style="width: 18rem">
-            <!-- <div class="card-body"> -->
             <div class="get-started">
               <a
                 href="https://www.youtube.com/watch?v=pBy1zgt0XPc&ab_channel=GitHub"
@@ -581,28 +580,62 @@
             </div>
           </div>
         </div>
+        <div class="dashboard-wrapper">
+          <div class="tabs">
+            <ul class="nav nav-tabs">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page"
+                  ><div>
+                    <button
+                      type="button"
+                      class="btn btn-outline-light dashboard-button"
+                    >
+                      Following
+                    </button>
+                  </div></a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active"
+                  ><div>
+                    <button
+                      type="button"
+                      class="btn btn-outline-light dashboard-button"
+                    >
+                      For you
+                      <span class="beta">Beta</span>
+                    </button>
+                  </div>
+                </a>
+              </li>
+            </ul>
+            <!-- <div>
+              <button
+                type="button"
+                class="btn btn-outline-light dashboard-button"
+              >
+                Following
+              </button>
+            </div>
+            <div>
+              <button
+                type="button"
+                class="btn btn-outline-light dashboard-button"
+              >
+                For you
+                <span class="beta">Beta</span>
+              </button>
+            </div> -->
+          </div>
+          <div class="dashboard">
+            <div class="card">
+              <div class="card-body">This is some text within a card body.</div>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <aside class="col right">
-        <!-- <div class="card" style="width: 18rem">
-          <img src="" class="card-img-top" /> -->
-        <!-- <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div> -->
-        <!-- </div> -->
-        <!-- <div class="card" style="width: 18rem">
-          <img src="./icons/bottom image card.png" class="card-img-top" /> -->
-        <!-- <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div> -->
-        <!-- </div> -->
-      </aside>
+      <aside class="col right"></aside>
     </main>
 
     <footer class="footer"></footer>
