added dashbord + feed

--- a/index.html
+++ b/index.html
@@ -609,27 +609,66 @@
                 </a>
               </li>
             </ul>
-            <!-- <div>
-              <button
-                type="button"
-                class="btn btn-outline-light dashboard-button"
-              >
-                Following
-              </button>
+          </div>
+          <div class="feed_body">
+            <div class="feed_content">
+              <img class="feed-avatar" src="./icons/userone.jpg" />
+              <div class="feed-text">
+                <div class="feed-title">
+                  <a class="feed-links" href="https://github.com/neruchev"
+                    >neruchev</a
+                  >
+                  starred
+                  <a
+                    class="feed-links"
+                    href="https://github.com/simeydotme/pokemon-cards-css"
+                  >
+                    simeydotme/pokemon-cards-css</a
+                  >
+                  <span class="small-text"> 2 weeks ago </span>
+                </div>
+              </div>
             </div>
-            <div>
-              <button
-                type="button"
-                class="btn btn-outline-light dashboard-button"
-              >
-                For you
-                <span class="beta">Beta</span>
-              </button>
-            </div> -->
           </div>
           <div class="dashboard">
             <div class="card">
-              <div class="card-body">This is some text within a card body.</div>
+              <div class="card-body">
+                <div>
+                  <a href="https://github.com/simeydotme/pokemon-cards-css">
+                    simeydotme/pokemon-cards-css</a
+                  >
+                </div>
+                <div>
+                  A collection of advanced CSS styles to create
+                  realistic-looking effects for the faces of Pokemon cards.
+                </div>
+                <p>
+                  <span>
+                    <span class="red-dot"></span>
+                    <span>Svelte</span>
+                  </span>
+                  <span>
+                    <a
+                      href="https://github.com/simeydotme/pokemon-cards-css/stargazers"
+                      ><svg
+                        class="octicon octicon-star mr-1"
+                        viewBox="0 0 16 16"
+                        version="1.1"
+                        width="16"
+                        height="16"
+                        aria-hidden="true"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          d="M8 .25a.75.75 0 01.673.418l1.882 3.815 4.21.612a.75.75 0 01.416 1.279l-3.046 2.97.719 4.192a.75.75 0 01-1.088.791L8 12.347l-3.766 1.98a.75.75 0 01-1.088-.79l.72-4.194L.818 6.374a.75.75 0 01.416-1.28l4.21-.611L7.327.668A.75.75 0 018 .25zm0 2.445L6.615 5.5a.75.75 0 01-.564.41l-3.097.45 2.24 2.184a.75.75 0 01.216.664l-.528 3.084 2.769-1.456a.75.75 0 01.698 0l2.77 1.456-.53-3.084a.75.75 0 01.216-.664l2.24-2.183-3.096-.45a.75.75 0 01-.564-.41L8 2.694v.001z"
+                        ></path>
+                      </svg>
+                    </a>
+                    3.2k</span
+                  >
+                  <span> Updated Dec 14</span>
+                </p>
+              </div>
             </div>
           </div>
         </div>
